--- a/P1.ipynb
+++ b/P1.ipynb
@@ -263,6 +263,28 @@
     "        for x1,y1,x2,y2 in line:\n",
     "            cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
     "\n",
+    "\n",
+    "def line_to_hough(x1, y1, x2, y2):\n",
+    "    \"\"\"\n",
+    "    This function takes in a line defined by two points and attempts to find the hough transform of the line.\n",
+    "    \n",
+    "    theta should be the angle between the x-axis and a ray starting from the origin passing perpendicular through the line.\n",
+    "    Unkown behavoir for points existing left of the y-axis and lines that part parellel to the x-axis\n",
+    "    \n",
+    "    rho should return the distance to the intersection point\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    #Some math I made up on a white board.\n",
+    "    #see \n",
+    "    \n",
+    "    theta = math.atan2(x, y)\n",
+    "    return rho, theta\n",
+    "    \n",
+    "\n",
+    "def consolidate_lines(lines):\n",
+    "    line_to_hough(x1,y1,x2,y2)\n",
+    "\n",
+    "            \n",
     "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap):\n",
     "    \"\"\"\n",
     "    `img` should be the output of a Canny transform.\n",
@@ -273,6 +295,8 @@
     "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
     "    draw_lines(line_img, lines)\n",
     "    return line_img\n",
+    "\n",
+    "\n",
     "\n",
     "# Python 3 has support for cool math symbols.\n",
     "\n",
