--- a/P1.ipynb
+++ b/P1.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,9 +275,26 @@
     "    \"\"\"\n",
     "    \n",
     "    #Some math I made up on a white board.\n",
-    "    #see \n",
-    "    \n",
+    "    #see https://github.com/kyesh/CarND-LaneLines-P1/blob/master/supportingImages/IMG_20170807_192552.jpg\n",
+    "    #using simillar triangles taking the inverse tangent of the x component of the line over the y component of the line should give you the angle from the x-axis.\n",
+    "    #The math/logic I used for getting negative angles should work for the right side of the y-axis, behabior unkown left of y-axis\n",
+    "    #print('x1',x1,'x2',x2,'y2',y2,'y1',y1)\n",
+    "    x = x1-x2\n",
+    "    y = y2-y1\n",
+    "    #print('x',x,'y',y)\n",
+    "    #If y is negative that means that y2 is higher than y1 and mutiplying by negative one should effectively flip the order the points were subtracted in.\n",
+    "    if y < 0:\n",
+    "        x = x*-1\n",
+    "        y = y*-1\n",
+    "    #print('x',x,'y',y)\n",
+    "    #print(math.atan2(x, y))\n",
     "    theta = math.atan2(x, y)\n",
+    "    #print(theta)\n",
+    "        \n",
+    "    # This equation comes from https://en.wikipedia.org/wiki/Distance_from_a_point_to_a_line#Line_defined_by_two_points\n",
+    "    rho = abs(float(x2)*y1-y2*x1)/math.sqrt(pow(y2-y1,2)+pow(x2-x1,2))\n",
+    "    #print(\"rho\",rho)\n",
+    "    #print(\"theta\",theta)\n",
     "    return rho, theta\n",
     "    \n",
     "\n",
@@ -313,6 +330,36 @@
     "    NOTE: initial_img and img must be the same shape!\n",
     "    \"\"\"\n",
     "    return cv2.addWeighted(initial_img, α, img, β, λ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.7071067811865475, -0.7853981633974483)\n",
+      "(21.213203435596427, -0.7853981633974483)\n",
+      "(0.7071067811865475, -0.7853981633974483)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test Functions\n",
+    "\n",
+    "#should have same theta\n",
+    "#print(\"Why is it only showing one\")\n",
+    "print(line_to_hough(0, -1, 1, 0))\n",
+    "#print(\"Where's the first one?\")\n",
+    "print(line_to_hough(0, -30, 30, 0))\n",
+    "\n",
+    "#should have opposite theta\n",
+    "print(line_to_hough(-1, 0, 0, 1))\n",
+    "\n",
+    "\n"
    ]
   },
   {
