I think line_to_hough works as desired

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,31 +268,39 @@
     "    \"\"\"\n",
     "    This function takes in a line defined by two points and attempts to find the hough transform of the line.\n",
     "    \n",
-    "    theta should be the angle between the x-axis and a ray starting from the origin passing perpendicular through the line.\n",
-    "    Unkown behavoir for points existing left of the y-axis and lines that part parellel to the x-axis\n",
+    "    theta should be an angle between 0 and Pi indicating a ray starting from an orgin the intersects the line at a 90 degree angle\n",
     "    \n",
-    "    rho should return the distance to the intersection point\n",
+    "    rho should return the distance to the intersection point. May be negative for intersection points between 0 and -pi\n",
     "    \"\"\"\n",
     "    \n",
     "    #Some math I made up on a white board.\n",
-    "    #see https://github.com/kyesh/CarND-LaneLines-P1/blob/master/supportingImages/IMG_20170807_192552.jpg\n",
+    "    #previous work https://github.com/kyesh/CarND-LaneLines-P1/blob/master/supportingImages/IMG_20170807_192552.jpg\n",
     "    #using simillar triangles taking the inverse tangent of the x component of the line over the y component of the line should give you the angle from the x-axis.\n",
-    "    #The math/logic I used for getting negative angles should work for the right side of the y-axis, behabior unkown left of y-axis\n",
+    "    #New work \n",
+    "    #https://github.com/kyesh/CarND-LaneLines-P1/blob/master/supportingImages/IMG_20170808_185138.jpg\n",
+    "    #https://github.com/kyesh/CarND-LaneLines-P1/blob/master/supportingImages/IMG_20170808_185147.jpg\n",
+    "    \n",
     "    #print('x1',x1,'x2',x2,'y2',y2,'y1',y1)\n",
     "    x = x1-x2\n",
-    "    y = y2-y1\n",
+    "    y = y1-y2\n",
     "    #print('x',x,'y',y)\n",
     "    #If y is negative that means that y2 is higher than y1 and mutiplying by negative one should effectively flip the order the points were subtracted in.\n",
-    "    if y < 0:\n",
+    "    if x < 0:\n",
     "        x = x*-1\n",
     "        y = y*-1\n",
     "    #print('x',x,'y',y)\n",
     "    #print(math.atan2(x, y))\n",
-    "    theta = math.atan2(x, y)\n",
+    "    yflipped = y*-1\n",
+    "    theta = math.atan2(x, yflipped)\n",
     "    #print(theta)\n",
     "        \n",
     "    # This equation comes from https://en.wikipedia.org/wiki/Distance_from_a_point_to_a_line#Line_defined_by_two_points\n",
     "    rho = abs(float(x2)*y1-y2*x1)/math.sqrt(pow(y2-y1,2)+pow(x2-x1,2))\n",
+    "    \n",
+    "    #Makes rho negative if line has negative intercept.\n",
+    "    if y1 < x1*y/float(x):\n",
+    "        rho = rho*-1\n",
+    "        \n",
     "    #print(\"rho\",rho)\n",
     "    #print(\"theta\",theta)\n",
     "    return rho, theta\n",
