--- a/P1.ipynb
+++ b/P1.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
     "    \n",
     "    y0 = math.sin(line[1])*line[0]\n",
     "    x0 = math.cos(line[1])*line[0]\n",
-    "    t = math.tan(line[1])\n",
+    "    t = -math.tan(line[1])\n",
     "    x = (y-y0)*t + x0\n",
     "    \n",
     "    return int(x) #I think the draw lines only takes ints?\n",
@@ -346,7 +346,7 @@
     "    leftLane = list()\n",
     "    #print(dir(lines))\n",
     "    \n",
-    "    print(houghLines)\n",
+    "    #print(houghLines)\n",
     "    \n",
     "    for line in houghLines:\n",
     "        if line[1] > math.pi/2:\n",
@@ -484,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
