--- a/P1.ipynb
+++ b/P1.ipynb
@@ -172,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -353,7 +355,8 @@
     "            rightLane.append(line)\n",
     "        elif line[1] < math.pi/2:\n",
     "            leftLane.append(line)\n",
-    "            \n",
+    "           \n",
+    "    #Code for getting average modified version of http://localhost:8888/?token=bd8b574b8698b62f79aa02117c0aa60455aa450c0d24cf5f\n",
     "    finalRightLane = [sum(y) / len(y) for y in zip(*rightLane)]\n",
     "    \n",
     "    finalLeftLane = [sum(y) / len(y) for y in zip(*leftLane)]\n",
